Moved everything to SpaceApp

--- a/Source/SpacePark.Tests/SpacePark.Tests.csproj
+++ b/Source/SpacePark.Tests/SpacePark.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SpacePark\SpacePark.csproj" />
+    <ProjectReference Include="..\SpaceApp\SpaceApp.csproj" />
   </ItemGroup>
 
 </Project>
