--- a/Source/SpaceApp/SpaceApp.csproj
+++ b/Source/SpaceApp/SpaceApp.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Form2.cs" />
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
